kubernetes/bases/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment

spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1
  template:
    metadata:
      labels: 
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: nginx:latest
          ports:
            - containerPort: 80
              name: http
