kubernetes/bases/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service

spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
    - name: http
      port: 80
      targetPort: http
