kubernetes/bases/hello-world/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: helloworld-ingressroute

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`helloworld.feldman.tech`)
      kind: Rule
      services:
        - name: helloworld-service
          port: 80
